// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field Numeric has a helptext 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="numericField"
    tabindex="0"
  >
    <input
      aria-errormessage="numericField_fieldError"
      aria-invalid="true"
      aria-labelledby="numericField_fieldLabel"
      class="form-control"
      id="numericField"
      name="numericField"
      type="text"
      value=""
    />
    <span
      class="form-text"
      id="numericField_fieldTip"
    >
      Type something
    </span>
  </div>
</div>
`;

exports[`Field Numeric has a key 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="numericField"
    tabindex="0"
  >
    <input
      aria-errormessage="numericField_fieldError"
      aria-invalid="true"
      aria-labelledby="numericField_fieldLabel"
      class="form-control"
      id="numericField"
      name="numericField"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`Field Numeric has a label 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="numericField"
  >
    <label
      aria-labelledby="numericField_fieldOnlyLabel"
      class="ddm-label"
      id="numericField_fieldLabel"
      tabindex="0"
    >
      label
    </label>
    <input
      aria-errormessage="numericField_fieldError"
      aria-invalid="true"
      aria-labelledby="numericField_fieldLabel"
      class="form-control"
      id="numericField"
      name="numericField"
      type="text"
      value=""
    />
    <span
      class="sr-only"
      id="numericField_fieldOnlyLabel"
    >
      label
    </span>
  </div>
</div>
`;

exports[`Field Numeric has a placeholder 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="numericField"
    tabindex="0"
  >
    <input
      aria-errormessage="numericField_fieldError"
      aria-invalid="true"
      aria-labelledby="numericField_fieldLabel"
      class="form-control"
      id="numericField"
      name="numericField"
      placeholder="Placeholder"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`Field Numeric has a value 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="numericField"
    tabindex="0"
  >
    <input
      aria-errormessage="numericField_fieldError"
      aria-invalid="true"
      aria-labelledby="numericField_fieldLabel"
      class="form-control"
      id="numericField"
      name="numericField"
      type="text"
      value="123"
    />
  </div>
</div>
`;

exports[`Field Numeric has an id 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="numericField"
    tabindex="0"
  >
    <input
      aria-errormessage="numericField_fieldError"
      aria-invalid="true"
      aria-labelledby="numericField_fieldLabel"
      class="form-control"
      id="numericField"
      name="numericField"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`Field Numeric is not readOnly 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="numericField"
    tabindex="0"
  >
    <input
      aria-errormessage="numericField_fieldError"
      aria-invalid="true"
      aria-labelledby="numericField_fieldLabel"
      class="form-control"
      id="numericField"
      name="numericField"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`Field Numeric is not required 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="numericField"
    tabindex="0"
  >
    <input
      aria-errormessage="numericField_fieldError"
      aria-invalid="true"
      aria-labelledby="numericField_fieldLabel"
      aria-required="false"
      class="form-control"
      id="numericField"
      name="numericField"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`Field Numeric renders Label if showLabel is true 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="numericField"
  >
    <label
      aria-labelledby="numericField_fieldOnlyLabel"
      class="ddm-label"
      id="numericField_fieldLabel"
      tabindex="0"
    >
      Numeric Field
    </label>
    <input
      aria-errormessage="numericField_fieldError"
      aria-invalid="true"
      aria-labelledby="numericField_fieldLabel"
      class="form-control"
      id="numericField"
      name="numericField"
      type="text"
      value=""
    />
    <span
      class="sr-only"
      id="numericField_fieldOnlyLabel"
    >
      Numeric Field
    </span>
  </div>
</div>
`;

exports[`Field Numeric renders the default markup 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="numericField"
    tabindex="0"
  >
    <input
      aria-errormessage="numericField_fieldError"
      aria-invalid="true"
      aria-labelledby="numericField_fieldLabel"
      class="form-control"
      id="numericField"
      name="numericField"
      type="text"
      value=""
    />
  </div>
</div>
`;
